Added express server with POST endpoint for API tests
Frontend now supports 200 OK requests

--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "APEX micro service and dev tool for testing level 0 - 2 requests and verifying JOSE (JSON Object Signing and Encryption) response",
   "scripts": {
     "build": "webpack --progress --colors --env.production",
-    "devbuild": "webpack-dev-server --progress --colors --env.devbuild",
-    "devserver": "webpack-dev-server",
+    "devuiserver": "webpack-dev-server",
+    "devui": "webpack --watch",
+    "devserver": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "snyk-protect": "snyk protect",
     "prepare": "npm run snyk-protect"
@@ -18,16 +19,18 @@
     "angular-animate": "^1.6.4",
     "angular-ui-bootstrap": "^2.5.0",
     "angular-ui-notification": "^0.3.6",
+    "body-parser": "^1.18.3",
     "bootstrap": "^3.3.7",
+    "express": "^4.16.3",
     "jose": "^0.3.2",
     "jquery": "^3.3.1",
     "jsrsasign": "^8.0.7",
     "querystring": "^0.2.0",
     "randombytes": "^2.0.6",
+    "superagent": "^4.0.0-beta.5",
     "urlsafe-base64": "1.0.0"
   },
   "devDependencies": {
-    "snyk": "^1.88.0",
     "@babel/core": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
     "babel-loader": "^8.0.0",
@@ -38,7 +41,9 @@
     "file-loader": "^2.0.0",
     "html-webpack-inline-source-plugin": "^0.0.10",
     "html-webpack-plugin": "^3.2.0",
+    "nodemon": "^1.18.4",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "snyk": "^1.88.0",
     "style-loader": "^0.23.0",
     "url-loader": "^1.1.1",
     "webpack": "^4.20.2",
