--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jose": "^0.3.2",
     "jquery": "^3.3.1",
     "jsrsasign": "^8.0.7",
+    "morgan": "^1.9.1",
     "querystring": "^0.2.0",
     "randombytes": "^2.0.6",
     "superagent": "^4.0.0-beta.5",
@@ -37,9 +38,7 @@
     "base64-img": "^1.0.3",
     "css-loader": "^1.0.0",
     "cssnano": "^4.1.4",
-    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^2.0.0",
-    "html-webpack-inline-source-plugin": "^0.0.10",
     "html-webpack-plugin": "^3.2.0",
     "nodemon": "^1.18.4",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
