--- a/package.json
+++ b/package.json
@@ -13,16 +13,15 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@babel/polyfill": "^7.0.0",
     "@fortawesome/fontawesome-free": "^5.4.0",
-    "@uirouter/angularjs": "^1.0.15",
-    "angular": "^1.7.5",
+    "@uirouter/angularjs": "^1.0.22",
+    "angular": "^1.7.8",
     "angular-ui-bootstrap": "^2.5.0",
     "angular-ui-notification": "^0.3.6",
     "morgan": "^1.9.1",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.3.1",
-    "express": "^4.16.3",
+    "express": "^4.17.1",
     "jose": "^0.3.2",
     "jquery": "^3.4.0",
     "jsrsasign": "^8.0.7",
@@ -31,27 +30,27 @@
     "querystring": "^0.2.0",
     "randombytes": "^2.0.6",
     "ui-bootstrap4": "^3.0.5",
-    "superagent": "^4.0.0-beta.5",
+    "superagent": "^5.1.0",
     "superagent-proxy": "^2.0.0",
     "urlsafe-base64": "1.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.0",
-    "@babel/preset-env": "^7.1.0",
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
     "babel-loader": "^8.0.0",
     "css-loader": "^1.0.0",
     "cssnano": "^4.1.4",
     "file-loader": "^2.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "nodemon": "^1.18.9",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "nodemon": "^1.19.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "snyk": "^1.88.0",
-    "style-loader": "^0.23.0",
-    "url-loader": "^1.1.1",
-    "webpack": "^4.20.2",
-    "webpack-cli": "^3.1.1",
-    "webpack-dev-server": "^3.1.11"
+    "style-loader": "^1.0.0",
+    "url-loader": "^2.1.0",
+    "webpack": "^4.39.3",
+    "webpack-cli": "^3.3.7",
+    "webpack-dev-server": "^3.8.0"
   },
   "repository": {
     "type": "git",
